# mcp-ebook-server

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/mcp_ebook_server/: __init__.py  __main__.py  epub_parser.py  library.py  server.py
