[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ebook-server"
version = "1.0.0"
description = "MCP server providing AI access to ebook libraries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BryanLabs" }
]
keywords = ["mcp", "ebook", "epub", "ai", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
mcp-ebook-server = "mcp_ebook_server.server:main"

[project.urls]
Homepage = "https://github.com/bryanlabs/mcp-ebook-server"
Repository = "https://github.com/bryanlabs/mcp-ebook-server"
Issues = "https://github.com/bryanlabs/mcp-ebook-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_ebook_server"]

